feat: page thanhtoannhunglansau

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -74,6 +74,7 @@
 @import "pages/vietdanhgia";
 @import "pages/thanhtoanlandau";
 @import "pages/phuongthucthanhtoan";
+@import "pages/thanhtoannhunglansau";
 
 @import 'themes/theme';
 @import 'themes/admin';
