--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -18,6 +18,18 @@
     &--minus{
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3E%3Cpath d='M12.5 8.04004L4.5 8.04004' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
     }
+    &--user1{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='16' viewBox='0 0 17 16' fill='none'%3E%3Cellipse cx='8.50065' cy='11.6668' rx='4.66667' ry='2.33333' stroke='%23444241' stroke-width='1.5' stroke-linejoin='round'/%3E%3Ccircle cx='8.50065' cy='4.66667' r='2.66667' stroke='%23444241' stroke-width='1.5' stroke-linejoin='round'/%3E%3C/svg%3E");
+    }
+    &--location1{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='16' viewBox='0 0 17 16' fill='none'%3E%3Cpath d='M14.5 7.25942C14.5 10.5322 10.75 14.6668 8.5 14.6668C6.25 14.6668 2.5 10.5322 2.5 7.25942C2.5 3.98662 5.18629 1.3335 8.5 1.3335C11.8137 1.3335 14.5 3.98662 14.5 7.25942Z' stroke='%23444241' stroke-width='1.5'/%3E%3Cpath d='M10.5 7.3335C10.5 8.43807 9.60457 9.3335 8.5 9.3335C7.39543 9.3335 6.5 8.43807 6.5 7.3335C6.5 6.22893 7.39543 5.3335 8.5 5.3335C9.60457 5.3335 10.5 6.22893 10.5 7.3335Z' stroke='%23444241' stroke-width='1.5'/%3E%3C/svg%3E");
+    }
+    &--home-wifi{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='16' viewBox='0 0 17 16' fill='none'%3E%3Cpath d='M9 11.3335C9 11.6096 8.77614 11.8335 8.5 11.8335C8.22386 11.8335 8 11.6096 8 11.3335C8 11.0574 8.22386 10.8335 8.5 10.8335C8.77614 10.8335 9 11.0574 9 11.3335Z' fill='%23444241'/%3E%3Cpath d='M11.3284 8.50507C10.6045 7.78121 9.60455 7.3335 8.49998 7.3335C7.39541 7.3335 6.39541 7.78121 5.67155 8.50507M7.08576 9.91928C7.44769 9.55735 7.94769 9.3335 8.49998 9.3335C9.05226 9.3335 9.55226 9.55735 9.91419 9.91928M14.5 6.76705V11.9781C14.5 13.463 13.3061 14.6668 11.8333 14.6668H5.16667C3.69391 14.6668 2.5 13.463 2.5 11.9781V6.76705C2.5 5.95974 2.85976 5.19516 3.47991 4.68451L6.81324 1.93973C7.79487 1.13142 9.20513 1.13142 10.1868 1.93973L13.5201 4.68451C14.1402 5.19516 14.5 5.95974 14.5 6.76705Z' stroke='%23444241' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    }
+    &--warning{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='16' viewBox='0 0 17 16' fill='none'%3E%3Cellipse cx='8.49935' cy='11.3333' rx='0.666667' ry='0.666666' transform='rotate(-180 8.49935 11.3333)' fill='%2328303F'/%3E%3Cpath d='M8.50065 9.3335L8.50065 4.66683M15.1673 8.00016C15.1673 11.6821 12.1825 14.6668 8.50065 14.6668C4.81875 14.6668 1.83398 11.6821 1.83398 8.00016C1.83398 4.31826 4.81875 1.3335 8.50065 1.3335C12.1825 1.3335 15.1673 4.31826 15.1673 8.00016Z' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    }
   }
   $x:20px;
   &__#{$x}{
@@ -73,6 +85,9 @@
     display: flex;
     background-position: center;
     background-repeat: no-repeat;
+    &--briefcase{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='21' height='21' viewBox='0 0 21 21' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.25 3.75C7.25 2.50736 8.25736 1.5 9.5 1.5H11.5C12.7426 1.5 13.75 2.50736 13.75 3.75V4.75H7.25V3.75ZM5.75 4.75V3.75C5.75 1.67893 7.42893 0 9.5 0H11.5C13.5711 0 15.25 1.67893 15.25 3.75V4.75H16.5C18.7091 4.75 20.5 6.54086 20.5 8.75V9.92289C19.8061 10.2571 18.9354 10.6572 17.9703 11.057C16.1735 11.8012 14.1138 12.5166 12.2772 12.8318C11.9445 12.1892 11.2736 11.75 10.5 11.75C9.72644 11.75 9.05545 12.1892 8.72277 12.8318C6.88623 12.5166 4.82646 11.8012 3.02963 11.057C2.06459 10.6572 1.19385 10.2572 0.5 9.92291V8.75C0.5 6.54086 2.29086 4.75 4.5 4.75H5.75ZM18.5444 12.4428C19.2572 12.1475 19.9193 11.8525 20.5 11.5824V16.75C20.5 18.9591 18.7091 20.75 16.5 20.75H4.5C2.29086 20.75 0.5 18.9591 0.5 16.75V11.5824C1.08068 11.8525 1.7428 12.1475 2.45561 12.4428C4.28817 13.2019 6.52159 13.9907 8.58512 14.3291C8.83343 15.1513 9.5968 15.75 10.5 15.75C11.4032 15.75 12.1666 15.1513 12.4149 14.3291C14.4784 13.9907 16.7118 13.2019 18.5444 12.4428Z' fill='%23966412'/%3E%3C/svg%3E");
+    }
     &--card{
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='21' height='18' viewBox='0 0 21 18' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16.5 0C18.4528 0 20.0787 1.39935 20.4298 3.25L0.570198 3.25C0.921252 1.39935 2.54721 0 4.5 0H16.5ZM20.5 7.25V4.75L0.5 4.75V7.25H20.5ZM20.5 8.75L0.5 8.75V14C0.5 16.2091 2.29086 18 4.5 18H16.5C18.7091 18 20.5 16.2091 20.5 14V8.75ZM4.5 15C5.05228 15 5.5 14.5523 5.5 14C5.5 13.4477 5.05228 13 4.5 13C3.94772 13 3.5 13.4477 3.5 14C3.5 14.5523 3.94772 15 4.5 15Z' fill='%23966412'/%3E%3C/svg%3E");
     }
