feat: page thanhtoanchuyenkhoan

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -75,6 +75,7 @@
 @import "pages/thanhtoanlandau";
 @import "pages/phuongthucthanhtoan";
 @import "pages/thanhtoannhunglansau";
+@import "pages/thanhtoanchuyenkhoan";
 
 @import 'themes/theme';
 @import 'themes/admin';
