--- a/scss/components/_borders.scss
+++ b/scss/components/_borders.scss
@@ -26,3 +26,6 @@ $sizes:(
 .bd-1-F6F6F6{
   border: var(----f1-number-1, 1px) solid var(--200, #F6F6F6);
 }
+.bd-1-EBE9E3{
+  border: var(----f1-number-1, 1px) solid var(--200, #EBE9E3);
+}
