feat: page thanhtoanbangvi-dusodu

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -76,6 +76,7 @@
 @import "pages/phuongthucthanhtoan";
 @import "pages/thanhtoannhunglansau";
 @import "pages/thanhtoanchuyenkhoan";
+@import "pages/thanhtoanbangvi";
 
 @import 'themes/theme';
 @import 'themes/admin';
