feat: page phuongthucnapcoin

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -77,6 +77,7 @@
 @import "pages/thanhtoannhunglansau";
 @import "pages/thanhtoanchuyenkhoan";
 @import "pages/thanhtoanbangvi";
+@import "pages/phuongthucnapcoin";
 
 @import 'themes/theme';
 @import 'themes/admin';
