feat: page naptien

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -78,6 +78,7 @@
 @import "pages/thanhtoanchuyenkhoan";
 @import "pages/thanhtoanbangvi";
 @import "pages/phuongthucnapcoin";
+@import "pages/naptien";
 
 @import 'themes/theme';
 @import 'themes/admin';
