--- a/scss/components/_padding.scss
+++ b/scss/components/_padding.scss
@@ -12,6 +12,7 @@ $sizes:(
 $sizes:(
         '0-12' 0 12px,
         '6-12' 6px 12px,
+        '9-12' 9px 12px,
         '0-8' 0 8px,
         '4-8' 4px 8px,
 );
