feat: update home

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -79,6 +79,7 @@
 @import "pages/thanhtoanbangvi";
 @import "pages/phuongthucnapcoin";
 @import "pages/naptien";
+@import "pages/chitietdonhang";
 
 @import 'themes/theme';
 @import 'themes/admin';
