--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -53,7 +53,7 @@
         margin-top: 2px;
       }
       .footer__nav__li:not(.uk-active) &{
-        display: none;
+        //display: none;
       }
     }
     &__bg{
