--- a/style.css
+++ b/style.css
@@ -1472,9 +1472,6 @@
 .footer__nav__subtitle:nth-child(n+2) {
   margin-top: 2px;
 }
-.footer__nav__li:not(.uk-active) .footer__nav__subtitle {
-  display: none;
-}
 .footer__nav__bg {
   width: 28px;
   height: 28px;
@@ -1521,6 +1518,9 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='12' viewBox='0 0 10 12' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M5.00016 5.33333C6.47292 5.33333 7.66683 4.13943 7.66683 2.66667C7.66683 1.19391 6.47292 0 5.00016 0C3.5274 0 2.3335 1.19391 2.3335 2.66667C2.3335 4.13943 3.5274 5.33333 5.00016 5.33333ZM5.00016 12C7.57749 12 9.66683 10.8061 9.66683 9.33333C9.66683 7.86057 7.57749 6.66667 5.00016 6.66667C2.42283 6.66667 0.333496 7.86057 0.333496 9.33333C0.333496 10.8061 2.42283 12 5.00016 12Z' fill='white'/%3E%3C/svg%3E");
 }
 
+.home__search__box {
+  background-color: #fff !important;
+}
 .home__slider__box {
   display: flex;
   flex-direction: column;
