fix: update home

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,3 +1,9 @@
+:root{
+  //--brand-color: linear-gradient(277deg, #FFC01F 0%, #FFF38C 135.52%);
+  //--brand-color: linear-gradient(277deg, #36439b 0%, #483972 135.52%);
+  --brand-color: linear-gradient(277deg, #005b9c 0%, #3243ac 135.52%);
+}
+
 // Color
 $primary-color: #E68500;
 $secondary-color: #666AEE;
