--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -61,7 +61,7 @@
       height: 28px;
       border-radius: 50%;
       .footer__nav__li:is(.uk-active) &{
-        background: var(--brand-color, linear-gradient(284deg, #FFC01F -30.8%, #FFF38C 155.96%));
+        background: var(--brand-color, linear-gradient(277deg, #005b9c 0%, #3243ac 135.52%));
       }
     }
     &__icon{
